--- a/infra/client/angular/src/styles.scss
+++ b/infra/client/angular/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~@angular/material/prebuilt-themes/purple-green.css';
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
@@ -24,4 +26,8 @@ footer {
     color: antiquewhite;
     text-decoration: none;
   }
+}
+
+.product-planner-page {
+  margin: 10px;
 }
