--- a/infra/client/angular/src/app/items/item-class-details/item-class-details.component.html
+++ b/infra/client/angular/src/app/items/item-class-details/item-class-details.component.html
@@ -1,4 +1,4 @@
-<div class="product-planner-page">
+<section class="mat-typography">
   <h1>Hello, this is item class <strong>{{ itemClass.name }}</strong>.</h1>
   <a mat-raised-button routerLink="../..">&#8592; Back</a>
   <div class="description">{{ itemClass.description }}</div>
@@ -16,4 +16,4 @@
     </span>
     </div>
   </div>
-</div>
+</section>
