--- a/infra/client/angular/src/app/app.component.html
+++ b/infra/client/angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
-  Product planner
+  <h1 class="mat-display-3">Product planner</h1>
 </header>
 <router-outlet></router-outlet>
 <footer>
-  See <a href="https://github.com/maciejmalecki/inventory">https://github.com/maciejmalecki/inventory</a>
+  <p class="mat-caption">See <a href="https://github.com/maciejmalecki/inventory">https://github.com/maciejmalecki/inventory</a></p>
 </footer>
