--- a/infra/client/angular/src/app/dashboard/dashboard.component.html
+++ b/infra/client/angular/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,31 @@
-<div class="product-planner-page">
-  <h1>Item classes</h1>
-  <div class="item-class-header" *ngFor="let itemClass of itemClasses$ | async">
-    <div class="panel">
-      {{ itemClass.name}} - <em>{{ itemClass.description }}</em>
-    </div>
-    <a mat-raised-button routerLink="itemClasses/{{itemClass.name}}">details</a>
+<section class="mat-typography">
+  <h1 class="mat-display-2">Item classes</h1>
+  <div>
+    <form>
+      <mat-form-field>
+        <mat-label>Search</mat-label>
+        <input matInput placeholder="Item class" type="text">
+        <mat-icon matSuffix>search</mat-icon>
+      </mat-form-field>
+    </form>
   </div>
-</div>
+  <mat-grid-list cols="4">
+    <mat-grid-tile *ngFor="let itemClass of itemClasses$ | async">
+      <mat-card>
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>{{ itemClass.name }}</mat-card-title>
+          <mat-card-subtitle>Subtitle</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p>{{ itemClass.description }}</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <a mat-button routerLink="itemClasses/{{itemClass.name}}">{{ 'Show' | uppercase }}</a>
+          <button mat-button>{{ 'Add new' | uppercase }}</button>
+        </mat-card-actions>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</section>
 
