--- a/infra/client/angular/src/app/dashboard/dashboard.component.scss
+++ b/infra/client/angular/src/app/dashboard/dashboard.component.scss
@@ -5,3 +5,8 @@
     padding: 10px;
   }
 }
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
