--- a/infra/client/angular/src/app/dashboard/dashboard.component.html
+++ b/infra/client/angular/src/app/dashboard/dashboard.component.html
@@ -9,9 +9,16 @@
       </mat-form-field>
     </form>
   </div>
-  <mat-grid-list cols="4">
+  <mat-grid-list cols="4" rowHeight="200px">
+    <mat-grid-tile>
+      <mat-card class="dashboard-card">
+        <mat-card-actions>
+          <button mat-button>{{ 'New item class' | uppercase }} <mat-icon matSuffix>add</mat-icon></button>
+        </mat-card-actions>
+      </mat-card>
+    </mat-grid-tile>
     <mat-grid-tile *ngFor="let itemClass of itemClasses$ | async">
-      <mat-card>
+      <mat-card class="dashboard-card">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>{{ itemClass.name }}</mat-card-title>
