--- a/infra/client/angular/src/app/dashboard/dashboard.component.scss
+++ b/infra/client/angular/src/app/dashboard/dashboard.component.scss
@@ -10,3 +10,9 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+
+.dashboard-card {
+  margin: 10px;
+  width: 100%;
+  height: 80%;
+}
