--- a/infra/client/angular/src/app/app.component.scss
+++ b/infra/client/angular/src/app/app.component.scss
@@ -1,3 +1,8 @@
 .app-toolbar {
-  padding: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  button {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
