--- a/infra/client/angular/src/app/items/item-class-details/item-class-details.component.html
+++ b/infra/client/angular/src/app/items/item-class-details/item-class-details.component.html
@@ -1,7 +1,6 @@
 <section class="mat-typography">
-  <h1>Hello, this is item class <strong>{{ itemClass.name }}</strong>.</h1>
-  <a mat-raised-button routerLink="../..">&#8592; Back</a>
-  <div class="description">{{ itemClass.description }}</div>
+  <h1>{{ itemClass.name }}<button mat-icon-button><mat-icon>edit</mat-icon></button></h1>
+  <p class="description">{{ itemClass.description }}</p>
   <mat-divider></mat-divider>
   <mat-grid-list cols="4" rowHeight="170px">
     <mat-grid-tile *ngFor="let attribute of itemClass.attributes">
