edit item class

--- a/infra/client/angular/src/app/items/item-class-details/item-class-details.component.html
+++ b/infra/client/angular/src/app/items/item-class-details/item-class-details.component.html
@@ -1,5 +1,5 @@
 <section class="mat-typography">
-  <h1>{{ itemClass.name }}<button mat-icon-button><mat-icon>edit</mat-icon></button></h1>
+  <h1>{{ itemClass.name }}<a mat-icon-button routerLink="edit"><mat-icon>edit</mat-icon></a></h1>
   <p class="description">{{ itemClass.description }}</p>
   <mat-divider></mat-divider>
   <mat-grid-list cols="4" rowHeight="170px">
