--- a/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
+++ b/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
@@ -3,7 +3,7 @@
     <h1>
       {{ itemClass.name }}
       <button mat-icon-button><mat-icon>save</mat-icon></button>
-      <button mat-icon-button><mat-icon>cancel</mat-icon></button>
+      <button mat-icon-button routerLink=".."><mat-icon>cancel</mat-icon></button>
     </h1>
     <mat-form-field>
       <mat-label>Description</mat-label>
