--- a/infra/client/angular/src/app/app.component.html
+++ b/infra/client/angular/src/app/app.component.html
@@ -8,7 +8,7 @@
   <button mat-fab color="accent" (click)="goItemClasses()">
     <mat-icon>books</mat-icon>
   </button>
-  <button mat-fab color="accent">
+  <button mat-fab color="accent" (click)="goItems()">
     <mat-icon>menu_book</mat-icon>
   </button>
 </div>
