small styling fixes

--- a/infra/client/angular/src/app/items/item-details/item-details.component.scss
+++ b/infra/client/angular/src/app/items/item-details/item-details.component.scss
@@ -2,8 +2,14 @@
   width: 200px;
 }
 .value {
-  width: 100px;
+  width: 150px;
   &.scalar {
     text-align: right;
+  }
+}
+h1 {
+  a {
+    position: relative;
+    top: -5px;
   }
 }
