--- a/infra/client/angular/src/app/dashboard/dashboard.component.html
+++ b/infra/client/angular/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,6 @@
-<div class="product-planner-page">
-  <h1>Item classes</h1>
-  <div class="item-class-header" *ngFor="let itemClass of itemClasses$ | async">
-    <div class="panel">
-      {{ itemClass.name}} - <em>{{ itemClass.description }}</em>
-    </div>
-    <a mat-raised-button routerLink="itemClasses/{{itemClass.name}}">details</a>
+<section class="mat-typography">
+  <div>
+    <a mat-button routerLink="itemClasses">Item classes</a>
   </div>
-</div>
+</section>
 
