--- a/infra/client/angular/src/app/items/item-class-details/item-class-details.component.scss
+++ b/infra/client/angular/src/app/items/item-class-details/item-class-details.component.scss
@@ -2,3 +2,14 @@
   padding-top: 5px;
   padding-bottom: 5px;
 }
+.attribute-card {
+  margin: 10px;
+  width: 100%;
+  height: 60%;
+}
+h1 {
+  a {
+    position: relative;
+    top: -5px;
+  }
+}
