--- a/infra/client/angular/src/app/items/item-edit/item-edit.component.html
+++ b/infra/client/angular/src/app/items/item-edit/item-edit.component.html
@@ -5,12 +5,12 @@
   </h1>
   <form [formGroup]="formGroup">
     <div *ngFor="let value of item.values">
-      <mat-form-field *ngIf="isScalarValue(value)">
+      <mat-form-field class="editor" *ngIf="isScalarValue(value)">
         <mat-label>{{value.attribute.name}}</mat-label>
         <input type="text" matInput [placeholder]="value.attribute.name" formControlName="{{value.attribute.name}}">
         <span matSuffix>{{value.attribute.type.unit.code}}</span>
       </mat-form-field>
-      <mat-form-field *ngIf="isDictionaryValue(value)">
+      <mat-form-field class="editor" *ngIf="isDictionaryValue(value)">
         <mat-label>{{value.attribute.name}}</mat-label>
         <mat-select formControlName="{{value.attribute.name}}">
           <mat-option *ngFor="let item of value.attribute.type.items" [value]="item.code">{{item.value}}</mat-option>
