--- a/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
+++ b/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
@@ -5,7 +5,7 @@
       <button mat-icon-button><mat-icon>save</mat-icon></button>
       <button mat-icon-button routerLink=".."><mat-icon>cancel</mat-icon></button>
     </h1>
-    <mat-form-field>
+    <mat-form-field class="editor">
       <mat-label>Description</mat-label>
       <textarea matInput rows="4" placeholder="Description" formControlName="description"></textarea>
     </mat-form-field>
