--- a/infra/client/angular/src/app/items/item-edit/item-edit.component.html
+++ b/infra/client/angular/src/app/items/item-edit/item-edit.component.html
@@ -1,9 +1,15 @@
 <section class="mat-typography">
-  <h1>{{ item.name }}
-    <button mat-icon-button (click)="save()"><mat-icon>save</mat-icon></button>
-    <button mat-icon-button routerLink=".."><mat-icon>cancel</mat-icon></button>
-  </h1>
   <form [formGroup]="formGroup">
+      <mat-form-field>
+        <mat-label>Item name</mat-label>
+        <input type="text" matInput placeholder="Item name" formControlName="itemName">
+      </mat-form-field>
+      <button mat-icon-button (click)="save()">
+        <mat-icon>save</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="..">
+        <mat-icon>cancel</mat-icon>
+      </button>
     <div *ngFor="let value of item.values">
       <mat-form-field class="editor" *ngIf="isScalarValue(value)">
         <mat-label>{{value.attribute.name}}</mat-label>
