--- a/infra/client/angular/src/app/items/item-edit/item-edit.component.html
+++ b/infra/client/angular/src/app/items/item-edit/item-edit.component.html
@@ -1,16 +1,22 @@
 <section class="mat-typography">
-  <h1>{{ item.name }}
-    <button mat-icon-button (click)="save()"><mat-icon>save</mat-icon></button>
-    <button mat-icon-button routerLink=".."><mat-icon>cancel</mat-icon></button>
-  </h1>
   <form [formGroup]="formGroup">
+      <mat-form-field>
+        <mat-label>Item name</mat-label>
+        <input type="text" matInput placeholder="Item name" formControlName="itemName">
+      </mat-form-field>
+      <button mat-icon-button (click)="save()">
+        <mat-icon>save</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="..">
+        <mat-icon>cancel</mat-icon>
+      </button>
     <div *ngFor="let value of item.values">
-      <mat-form-field *ngIf="isScalarValue(value)">
+      <mat-form-field class="editor" *ngIf="isScalarValue(value)">
         <mat-label>{{value.attribute.name}}</mat-label>
         <input type="text" matInput [placeholder]="value.attribute.name" formControlName="{{value.attribute.name}}">
         <span matSuffix>{{value.attribute.type.unit.code}}</span>
       </mat-form-field>
-      <mat-form-field *ngIf="isDictionaryValue(value)">
+      <mat-form-field class="editor" *ngIf="isDictionaryValue(value)">
         <mat-label>{{value.attribute.name}}</mat-label>
         <mat-select formControlName="{{value.attribute.name}}">
           <mat-option *ngFor="let item of value.attribute.type.items" [value]="item.code">{{item.value}}</mat-option>
