--- a/infra/client/angular/src/app/items/items/items.component.html
+++ b/infra/client/angular/src/app/items/items/items.component.html
@@ -18,6 +18,7 @@
         </mat-card-content>
         <mat-card-actions>
           <a mat-button routerLink="{{item.name}}">{{ 'Show' | uppercase }}</a>
+          <a mat-button routerLink="{{item.name}}/duplicate">{{ 'Copy' | uppercase }}</a>
         </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
