--- a/infra/client/angular/src/app/items/item-details/item-details.component.html
+++ b/infra/client/angular/src/app/items/item-details/item-details.component.html
@@ -1,5 +1,8 @@
 <section class="mat-typography">
-  <h1>{{ item.name }}<a mat-icon-button routerLink="edit"><mat-icon>edit</mat-icon></a></h1>
+  <h1>{{ item.name }}
+    <a mat-icon-button routerLink="edit"><mat-icon>edit</mat-icon></a>
+    <button mat-icon-button (click)="delete()"><mat-icon>delete</mat-icon></button>
+  </h1>
   <mat-divider></mat-divider>
   <mat-list role="list">
     <mat-list-item role="listitem" *ngFor="let value of item.values">
