--- a/infra/client/angular/src/app/items/item-details/item-details.component.html
+++ b/infra/client/angular/src/app/items/item-details/item-details.component.html
@@ -7,7 +7,7 @@
   <mat-list role="list">
     <mat-list-item role="listitem" *ngFor="let value of item.values">
       <div class="value-name">{{value.attribute.name}}</div>
-      <div class="value scalar" *ngIf="isScalarValue(value)">{{ value.value }}</div>&nbsp;
+      <div class="value scalar" *ngIf="isScalarValue(value)">{{ value.data }}</div>&nbsp;
       <div class="unit" *ngIf="isScalarValue(value)">{{ value.attribute.type.unit.code }}</div>
       <div class="value" *ngIf="isDictionaryValue(value)">{{ getDictionaryValue(value) }}</div>
     </mat-list-item>
