--- a/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
+++ b/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
@@ -4,6 +4,7 @@
       {{ itemClass.name }}
       <button mat-icon-button><mat-icon>save</mat-icon></button>
       <button mat-icon-button routerLink=".."><mat-icon>cancel</mat-icon></button>
+      <button mat-icon-button (click)="deleteDraft()"><mat-icon>undo</mat-icon></button>
     </h1>
     <mat-form-field class="editor">
       <mat-label>Description</mat-label>
