--- a/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
+++ b/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
@@ -2,16 +2,35 @@
   <form [formGroup]="formGroup">
     <h1>
       {{ itemClass.name }}
-      <button mat-icon-button><mat-icon>save</mat-icon></button>
-      <button mat-icon-button routerLink=".."><mat-icon>cancel</mat-icon></button>
-      <button mat-icon-button (click)="deleteDraft()"><mat-icon>undo</mat-icon></button>
+      <button mat-icon-button>
+        <mat-icon>save</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="..">
+        <mat-icon>cancel</mat-icon>
+      </button>
+      <button mat-icon-button (click)="deleteDraft()">
+        <mat-icon>undo</mat-icon>
+      </button>
     </h1>
     <mat-form-field class="editor">
       <mat-label>Description</mat-label>
       <textarea matInput rows="4" placeholder="Description" formControlName="description"></textarea>
     </mat-form-field>
-    <ol>
-      <li *ngFor="let attr of attributeTypes">{{ attr.name }} - {{ attr.scalar }}</li>
-    </ol>
+    <div cdkDropListGroup>
+      <div>
+        <h1>Used attributes</h1>
+        <div cdkDropList>
+          <div *ngFor="let attr of selectedTypes" [cdkDragData]="selectedTypes" cdkDrag>{{ attr.name }}
+            - {{ attr.scalar }}</div>
+        </div>
+      </div>
+      <div>
+        <h1>Available attributes</h1>
+        <div cdkDropList>
+          <div *ngFor="let attr of unselectedTypes" [cdkDragData]="unselectedTypes" cdkDrag>{{ attr.name }}
+            - {{ attr.scalar }}</div>
+        </div>
+      </div>
+    </div>
   </form>
 </section>
