--- a/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
+++ b/infra/client/angular/src/app/items/item-class-edit/item-class-edit.component.html
@@ -11,6 +11,9 @@
       <button mat-icon-button (click)="deleteDraft()">
         <mat-icon>undo</mat-icon>
       </button>
+      <button mat-icon-button (click)="confirmDraft()">
+        <mat-icon>redo</mat-icon>
+      </button>
     </h1>
     <mat-form-field class="editor">
       <mat-label>Description</mat-label>
