--- a/infra/client/angular/src/app/items/item-classes/item-classes.component.html
+++ b/infra/client/angular/src/app/items/item-classes/item-classes.component.html
@@ -13,7 +13,7 @@
     <mat-grid-tile>
       <mat-card class="dashboard-card">
         <mat-card-actions>
-          <button mat-button>{{ 'New item class' | uppercase }} <mat-icon matSuffix>add</mat-icon></button>
+          <button mat-button (click)="newItemClass()">{{ 'New item class' | uppercase }} <mat-icon matSuffix>add</mat-icon></button>
         </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
