--- a/infra/client/angular/src/app/items/item-edit/item-edit.component.html
+++ b/infra/client/angular/src/app/items/item-edit/item-edit.component.html
@@ -21,18 +21,20 @@
         </mat-autocomplete>
       </mat-form-field>
     </div>
-    <div *ngFor="let value of item.values">
-      <mat-form-field class="editor" *ngIf="isScalarValue(value)">
-        <mat-label>{{value.attribute.name}}</mat-label>
-        <input type="text" matInput [placeholder]="value.attribute.name" formControlName="{{value.attribute.name}}">
-        <span matSuffix>{{value.attribute.type.unit.code}}</span>
-      </mat-form-field>
-      <mat-form-field class="editor" *ngIf="isDictionaryValue(value)">
-        <mat-label>{{value.attribute.name}}</mat-label>
-        <mat-select formControlName="{{value.attribute.name}}">
-          <mat-option *ngFor="let item of value.attribute.type.items" [value]="item.code">{{item.value}}</mat-option>
-        </mat-select>
-      </mat-form-field>
+    <div formGroupName="values">
+      <div *ngFor="let value of item.values">
+        <mat-form-field class="editor" *ngIf="isScalarValue(value)">
+          <mat-label>{{value.name}}</mat-label>
+          <input type="text" matInput [placeholder]="value.name" formControlName="{{value.name}}">
+          <span matSuffix>{{value.unit.code}}</span>
+        </mat-form-field>
+        <mat-form-field class="editor" *ngIf="isDictionaryValue(value)">
+          <mat-label>{{value.name}}</mat-label>
+          <mat-select formControlName="{{value.name}}">
+            <mat-option *ngFor="let item of value.items" [value]="item.code">{{item.value}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
     </div>
   </form>
 </section>
