more usage of BindBean

--- a/infra/client/angular/src/app/app.component.html
+++ b/infra/client/angular/src/app/app.component.html
@@ -14,5 +14,8 @@
 </div>
 <router-outlet></router-outlet>
 <footer>
+  <p class="mat-caption">&nbsp;</p>
+</footer>
+<footer class="fixed">
   <p class="mat-caption">See <a href="https://github.com/maciejmalecki/inventory">https://github.com/maciejmalecki/inventory</a></p>
 </footer>
