item stock page

--- a/infra/client/product-planner-ng/src/app/app.component.html
+++ b/infra/client/product-planner-ng/src/app/app.component.html
@@ -6,10 +6,13 @@
     <mat-icon>home</mat-icon>
   </button>
   <button mat-fab color="accent" (click)="goItemClasses()">
-    <mat-icon>books</mat-icon>
+    <mat-icon>architecture</mat-icon>
   </button>
   <button mat-fab color="accent" (click)="goItems()">
-    <mat-icon>menu_book</mat-icon>
+    <mat-icon>category</mat-icon>
+  </button>
+  <button mat-fab color="accent" (click)="goItemStock()">
+    <mat-icon>functions</mat-icon>
   </button>
 </div>
 <router-outlet></router-outlet>
